recursion.logo.koch.Crab.scala.error
Compilation error:
Crab:6: error: not found: value lenght
   crab(levels-1,lenght*1.44)
                 ^